@@ -3,8 +3,6 @@ This file contains a list of things yet to be done (see also in doc/TODO):
 Before next release
 -------------------
 
-ship texi2any, makeinfo
-
 Later
 -----
 
